--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Filippo Barbari
-subtitle: Tutor didattico Università di Bologna
+subtitle: Student
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
+  Filippo Barbari: Student
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://ledmington.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
@@ -13,25 +13,26 @@ urls:
       url: /about
     - text: Blog
       url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
+    #- text: Gallery
+    #  url: /gallery
+    #- text: Shop
+    #  url : /shop
     - text: Contact
       url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
+    #- text: Styleguide
+    #  url: /styleguide
+    #- text: Get Started
+    #  url: /get-started
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: John Doe
+author: Filippo Barbari
 author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
+author_email: "filippo.barbari@studio.unibo.it"
+author_location: Italy
+author_website_url: "https://www.filippobarbari.it"
+author_cv: "https://github.com/Ledmington/curriculum-vitae/releases/latest"
 typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
 
 # Experiences
