--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Filippo Barbari
-subtitle: Student
+subtitle: Developer and student
 description: >- # this means to ignore newlines until "baseurl:"
   Filippo Barbari: Student
 
@@ -26,14 +26,14 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
+author_logo: fototessera.png
 author: Filippo Barbari
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "filippo.barbari@studio.unibo.it"
+author_bio: "Filippo Barbari: developer and student"
+author_email: "filippo.barbari@gmail.com"
 author_location: Italy
 author_website_url: "https://www.filippobarbari.it"
 author_cv: "https://github.com/Ledmington/curriculum-vitae/releases/latest"
-typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
+typewrite-text: developer and student <3
 
 # Experiences
 author_work_experiences:
@@ -72,17 +72,25 @@ author_project_details:
                 project_url: https://hack4r.com
                 visibility: true
 
+external_links:
+  - name: Development
+    sites:
+      - baseurl: https://github.com
+        username: Ledmington
+        icon_name: fab fa-github
+        name: GitHub
+
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
+#twitter_username: johndoe
+github_username:  Ledmington
+#facebook_username: johndoe
 linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+#behance_username: johndoe
+#instagram_username: johndoe
+#medium_username: johndoe
+#telegram_username: johndoe
+#dribbble_username: johndoe
+#flickr_username: johndoe
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
@@ -93,10 +101,10 @@ hyvor_talk_website_id: 476
 wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+# mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: johndoe@gmail.com
+formspree_email: filippo.barbari@gmail.com
 
 # syntax highlighter
 markdown: kramdown
