--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Filippo Barbari: Student
 
 url: "https://ledmington.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "/about" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
     - text: Home
@@ -21,8 +21,8 @@ urls:
       url : /contact
     - text: Styleguide
       url: /styleguide
-    - text: Get Started
-      url: /get-started
+    #- text: Get Started
+    #  url: /get-started
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
