--- a/_config.yml
+++ b/_config.yml
@@ -98,10 +98,7 @@ linkedin_username: johndoe
 hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
-
-# mailchimp embedded form url (newsletter):
-# mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+wakatime_username: Ledmington
 
 # formspree (contact form)
 formspree_email: filippo.barbari@gmail.com
