--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ author: Filippo Barbari
 author_bio: "Filippo Barbari: developer and student"
 author_email: "filippo.barbari@gmail.com"
 author_location: Italy
-author_website_url: "https://www.filippobarbari.it"
+author_website_url: "https://ledmington.github.io"
 author_cv: "https://github.com/Ledmington/curriculum-vitae/releases/latest"
-typewrite-text: developer and student <3
+typewrite-text: Developer and student
 
 # Experiences
 author_work_experiences:
