--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: .
       args:
-        build_command: "jekyll build --watch --trace"
+        build_command: "jekyll serve --livereload --trace --verbose"
     volumes:
       - ".:/srv/jekyll"
     ports:
