Changed profile picture in Home

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: fototessera.png
+author_logo: profile.jpeg
 author: Filippo Barbari
 author_bio: "Filippo Barbari: developer and student"
 author_email: "filippo.barbari@gmail.com"
