Added proper link to CV in About

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author_bio: "Developer and master student at University of Bologna. Algorithms a
 author_email: "filippo.barbari@gmail.com"
 author_location: Italy
 author_website_url: "https://ledmington.github.io"
-author_cv: "https://github.com/Ledmington/curriculum-vitae/releases/latest"
+author_cv: "https://github.com/Ledmington/curriculum-vitae/releases/latest/download/curriculum-vitae-eng.pdf"
 typewrite-text: Developer and student
 
 # Experiences
