--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Filippo Barbari
 subtitle: Developer and student
 description: >- # this means to ignore newlines until "baseurl:"
-  Filippo Barbari: Student
+  Filippo Barbari's personal website
 
 url: "https://ledmington.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -17,10 +17,10 @@ urls:
     #  url: /gallery
     #- text: Shop
     #  url : /shop
-    - text: Contact
+    - text: Contact Me
       url : /contact
-    - text: Styleguide
-      url: /styleguide
+    #- text: Styleguide
+    #  url: /styleguide
     #- text: Get Started
     #  url: /get-started
 
