--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ url: "https://ledmington.github.io" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
-    - text: Home
-      url: /
+    #- text: Home
+    #  url: /
     - text: About
       url: /about
     - text: Blog
