--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 urls:
     #- text: Home
     #  url: /
-    - text: About
-      url: /about
+    #- text: About
+    #  url: /about
     - text: Blog
       url: /blog
     #- text: Gallery
