Fixed author page

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ urls:
 
 author_logo: authors/ledmington.jpeg
 author: Filippo Barbari
-author_bio: "Developer and master student at University of Bologna. Algorithms and Data Structures enthusiast."
+author_bio: "Developer and master student at University of Bologna. Algorithms and Data Structures enthusiast. I love esoteric languages as well as programming parallel simulations."
 author_email: "filippo.barbari@gmail.com"
 author_location: Italy
 author_website_url: "https://ledmington.github.io"
