Fixed Linkedin button in About

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ external_links:
 #twitter_username: johndoe
 github_username:  Ledmington
 #facebook_username: johndoe
-linkedin_username: johndoe
+linkedin_username: filippo-barbari-bb2b55181
 #behance_username: johndoe
 #instagram_username: johndoe
 #medium_username: johndoe
