Fixed formspree email

--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ linkedin_username: filippo-barbari-bb2b55181
 #wakatime_username: Ledmington
 
 # formspree (contact form)
-formspree_email: filippo.barbari@gmail.com
+formspree_email: xayvdgre
 
 # syntax highlighter
 markdown: kramdown
