Fixed other errors in html

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author_logo: authors/ledmington.jpeg
 author: Filippo Barbari
 author_bio: "Developer and master student at University of Bologna. Algorithms and Data Structures enthusiast. I love esoteric languages as well as programming parallel simulations."
 author_email: "filippo.barbari@gmail.com"
-author_location: Italy
+author_location: Riccione, Italy
 author_website_url: "https://ledmington.github.io"
 author_cv: "https://github.com/Ledmington/curriculum-vitae/releases/latest/download/curriculum-vitae-eng.pdf"
 typewrite-text: Developer and student
