--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,8 +7,8 @@ services:
       context: .
       args:
         build_command: "jekyll build"
-    volumes:
-      - ".:/srv/jekyll"
+    # volumes:
+    #   - ".:/srv/jekyll"
   nginx:
     image: nginx
     volumes:
