Added and improved cards

--- a/ledmington.github.io/package.json
+++ b/ledmington.github.io/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "trello": "open https://cryptpad.fr/kanban/#/2/kanban/edit/tsdSd2XS8OKvyKVTUMsXCgXH/ 2> /dev/null &",
+    "trello": "open https://cryptpad.fr/kanban/#/2/kanban/edit/tsdSd2XS8OKvyKVTUMsXCgXH/ 2>/dev/null &",
+    "icons":"open https://iconmonstr.com/ 2>/dev/null &",
     "update": "npx npm-check-updates -u",
     "clean": "rm -rf dist node_modules"
   },
