--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author_bio: "HPC Technology Specialist @ CINECA, Italy. Algorithms and Data Stru
 author_email: "filippo.barbari@gmail.com"
 author_location: Riccione, Italy
 author_website_url: "https://ledmington.github.io"
-author_cv: "curriculum.pdf"
+author_cv: "https://ledmington.github.io/curriculum.pdf"
 typewrite-text: Developer and student
 
 # Experiences
